tests/machine/x/java/two-sum.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramstwo-sum1264923560/001/Main.java:5: error: cannot find symbol
		var n = nums.size();
		            ^
  symbol:   method size()
  location: variable nums of type Object
/tmp/TestCompileValidProgramstwo-sum1264923560/001/Main.java:8: error: cannot find symbol
				if (nums.get(i) + nums.get(j) == target) {
				        ^
  symbol:   method get(int)
  location: variable nums of type Object
/tmp/TestCompileValidProgramstwo-sum1264923560/001/Main.java:8: error: cannot find symbol
				if (nums.get(i) + nums.get(j) == target) {
				                      ^
  symbol:   method get(int)
  location: variable nums of type Object
/tmp/TestCompileValidProgramstwo-sum1264923560/001/Main.java:16: error: cannot find symbol
	System.out.println(result.get(0));
	                         ^
  symbol:   method get(int)
  location: variable result of type Object
/tmp/TestCompileValidProgramstwo-sum1264923560/001/Main.java:17: error: cannot find symbol
	System.out.println(result.get(1));
	                         ^
  symbol:   method get(int)
  location: variable result of type Object
5 errors


  1| fun twoSum(nums: list<int>, target: int): list<int> {
  2|   let n = len(nums)
